--- a/components/OverlayLoader.style.css
+++ b/components/OverlayLoader.style.css
@@ -1,8 +1,6 @@
-/* OverlayLoader.css */
 
 .modal {
   z-index: 1000;
-  pointer-events: none;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -11,16 +9,21 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  pointer-events: auto; 
+  /* cursor: not-allowed;   */
 }
 
+
 .modal-overlay {
-  z-index: 1000;
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: black;
-  opacity: 0.5;
+  background-color: rgba(0, 0, 0, 0.266); 
+  backdrop-filter: blur(2px); 
+  -webkit-backdrop-filter: blur(5px); 
+  z-index: 5;
 }
+
 
 .modal-content {
   background-color: white;
@@ -34,6 +37,7 @@
   justify-content: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
 
 .spinner {
   animation: spin 1s linear infinite;
